# rent-a-bot

./: .gitignore  .gitlab-ci.yml  .travis-ci.yml  .travis.yml  AGENTS.md  CHANGELOG.md  COMPETITION.md  IMPROVEMENT_PLAN.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  pyproject.toml  setup.cfg  setup.py
.githooks/: pre-commit
.github/workflows/: ci.yml
rentabot/: __init__.py  cli.py  controllers.py  exceptions.py  logger.py  logging.py  main.py  models.py  views.py
rentabot/templates/: display_resources.html
tests/: conftest.py  db_utils.py  fixtures.py  test_cli.py  test_functional.py  test_functional_descriptor.py  test_functional_reservations.py  test_functional_resources.py  test_reservations.py  test_timeout.py  test_unit_descriptor.py  test_views.py
tests/assets/: resource_descriptor.yaml
