[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rent-a-bot"
version = "0.2.0"
description = "Rent-A-Bot, your automation resource provider."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Charles Poisson", email = "charles.poisson@gmail.com" }
]
keywords = ["Resource allocation application for automation"]
classifiers = [
    "Framework :: FastAPI",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Utilities",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "pyyaml",
    "daiquiri",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "ruff",
]
test = [
    "pytest",
    "pytest-cov",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/cpoisson/rent-a-bot"
Repository = "https://github.com/cpoisson/rent-a-bot"

[tool.hatch.build.targets.wheel]
packages = ["rentabot"]

[tool.hatch.build.targets.sdist]
include = [
    "/rentabot",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.pytest.ini_options]
addopts = "-vv --showlocals --cov=rentabot --cov-report term-missing"
testpaths = ["tests"]

[tool.coverage.run]
include = ["rentabot/*.py"]
omit = [".eggs/*", "tests/*"]

[tool.ruff]
target-version = "py37"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in argument defaults (required for FastAPI Query/Depends)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
